--- a/genres/country/style.css
+++ b/genres/country/style.css
@@ -11,9 +11,9 @@
   float:left;
 }
 body{
-background-color:orange;
-color:black;
+background-image:url(https://www.desktop-background.com/download/o/2015/12/03/1051611_full-hd-1080p-desert-wallpapers-hd-desktop-backgrounds-1920x1080_1920x1080_h.jpg);
+color:white;
 text-align: center;
-font-family: Comic sans MS;
+font-family: Verdana;
 font-size: 25px;
 }
