--- a/genres/edm/style.css
+++ b/genres/edm/style.css
@@ -11,9 +11,9 @@
   float:left;
 }
 body{
-background-color:lightblue;
-color:black;
+background-image:url(https://wallpaperplay.com/walls/full/d/4/7/42994.jpg);
+color:hotpink;
 text-align: center;
-font-family: Comic sans MS;
+font-family: Verdana;
 font-size: 25px;
 }
