--- a/genres/hiphop/style.css
+++ b/genres/hiphop/style.css
@@ -6,13 +6,13 @@
 .col{
   height:100%;
   width:49%;
-  border: 1.3px solid #A67B56;
+  border: 1.3px solid white;
   display: inline-block;
   float:left;
 }
 body{
-background-image: url(https://wallpaperplay.com/walls/full/a/8/a/289857.jpg);
-color:#E2B37D;
+background-image: url(http://natmonitor.com/news/wp-content/uploads/hiphop-aw.jpg);
+color:#d8d8d8;
 text-align: center;
 font-family: Verdana;
 font-size: 25px;
